# diffparc-surf

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_gifti.ipynb
.github/workflows/: testing.yml
dags/: 00_generate_dags.sh
diffparc/config/: snakebids.yml  snakebids.yml.Schaefer2018_100P_17N  snakebids.yml.Tian-Schaefer  snakebids.yml.Yeo17  snakebids.yml.Yeo7  snakebids.yml.standard.template.striatum-removed
diffparc/resources/: empty_sampledti.txt  synthseg_cortparc_labels.tsv  synthseg_labels.tsv  synthseg_simple_labels.tsv
diffparc/resources/tpl-MNI152NLin2009cAsym/: tpl-MNI152NLin2009cAsym_hemi-L_label-striatum_normals.shape.gii  tpl-MNI152NLin2009cAsym_hemi-L_striatum.surf.gii  tpl-MNI152NLin2009cAsym_hemi-R_label-striatum_normals.shape.gii  tpl-MNI152NLin2009cAsym_hemi-R_striatum.surf.gii
diffparc/workflow/: Snakefile
diffparc/workflow/report/: seg_qc.rst  synthseg_qc.rst
diffparc/workflow/rules/: bedpost.smk  cifti.smk  common.smk  diffparc.smk  masking_b0_to_template.smk  masking_bet_from-b0.smk  motioncorr.smk  mrtrix.smk  mrtrix_surf.smk  mrtrix_vol.smk  normalize.smk  parcbundles.smk  postproc_surf.smk  postproc_vol.smk  prepdwi.smk  preproc_dwi.smk  preproc_t1.smk  probtrack_surf.smk  probtrack_vol.smk  prop_seeds_targets.smk  reg_dwi_to_t1.smk  reg_t1_to_template.smk  sampledti.smk  seg_t1_brain_tissue.smk  surfarea.smk  surfdisp.smk  surfgen.smk  surfmorph.smk  surftrack.smk  synthseg.smk  tables.smk  vbm.smk  visqc.smk  volparc_postproc.smk  voltrack.smk
diffparc/workflow/scripts/: calculate_surf_volume_vtk.py  concat_csv.py  conn_csv_to_gifti_metric.py  conn_csv_to_image.py  convert_surf_gii_to_vtk.py  create_parc_tcklist.py  create_voxel_seed_images.py  eddymotion.py  gather_csv_files.py  gen_isosurface.py  normalize_by_percentile.py  normalize_by_zscore.py  seg_to_tissue.py  (+15 more)
docs/: conf.py
predict_subj/: diffparc-wf  run.py
predict_subj/config/: config.yml
predict_subj/workflow/: Snakefile
snakedwi/config/: snakebids.yml
snakedwi/workflow/: Snakefile
(+30 files in other folders)
