[tool.poetry]
name = "diffparc"
version = "0.1.0"
description = "diffparc - Snakebids app for diffusion-based parcellation"
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
snakebids = "^0.5.0"
snakemake = "^7.0.0"
pandas = "^1.4.2"
nibabel = "^3.2.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
nilearn = "^0.9.0"
PyPDF2 = "^1.26.0"
networkx = "^2.7.1"
pygraphviz = "^1.9"
Pygments = "^2.11.2"
pillow = "9.0.1"
pyvista = "^0.30.0"
eddymotion = "^0.1.4"
nitransforms = "^22.0.0"
nipype = "^1.8.4"


[tool.poetry.dev-dependencies]
snakefmt = "^0.6.0"
poethepoet = "^0.10.0"
black = ">=22.1.0,<23.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
diffparc = "diffparc.run:main"


[tool.poe.tasks]
quality_check = { shell = "isort diffparc/*.py -c && black diffparc --check && snakefmt diffparc --check" }
quality_fix = { shell = "isort diffparc/*.py && black diffparc  && snakefmt diffparc" }

[tool.isort]
profile = "black"
multi_line_output = 3
