[tool.poetry]
name = "diffparc"
version = "0.1.0"
description = "diffparc - Snakebids app for diffusion-based parcellation"
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
snakebids = "^0.5.0"
snakemake = "^7.0.0"

[tool.poetry.dev-dependencies]
snakefmt = "^0.6.0"
poethepoet = "^0.10.0"
black = ">=22.1.0,<23.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
diffparc = "diffparc.run:main"


[tool.poe.tasks]
quality_check = { shell = "isort diffparc/*.py -c && black diffparc --check && snakefmt diffparc --check" }
quality_fix = { shell = "isort diffparc/*.py && black diffparc  && snakefmt diffparc" }

[tool.isort]
profile = "black"
multi_line_output = 3
